[tool.poetry]
name = "group-raiding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.4.1"
sqlalchemy = "^2.0.19"
discord = "^2.3.2"
python-graphql-client = "^0.4.3"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
